--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jdeploy": {
         "jdk": true,
         "javaVersion": "11",
-        "jar": "target/mavenproject1-1.0.0.jar",
+        "jar": "target/mavenproject1-1.0.0-shaded.jar",
         "javafx": true,
         "title": "DC3APP"
     },
