--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "shelljs": "^0.8.4"
     },
     "license": "ISC",
-    "name": "DC3APP Scanner",
+    "name": "jdeploy-dc3app-scanner",
     "files": ["jdeploy-bundle"],
     "scripts": {"test": "echo \"Error: no test specified\" && exit 1"},
     "homepage": ""
